@@ -1,6 +1,6 @@
-import CPSTestCase
+import warnings
+warnings.warn("CPSDefaultTestCase is deprecated, use CPSTestCase instead.",
+              DeprecationWarning, stacklevel=2)
 
-CPSTestCase.setupPortal(CPSTestCase.CPSInstaller)
-
-CPSDefaultTestCase = CPSTestCase.CPSTestCase
-
+from Products.CPSDefault.tests.CPSTestCase import (
+    CPSTestCase as CPSDefaultTestCase)
