@@ -1,0 +1,14 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:meta="http://namespaces.zope.org/meta"
+    xmlns:five="http://namespaces.zope.org/five">
+
+  <!-- this comes from Five/skel/site.zcml -->
+
+  <include package="Products.Five"/>
+  <meta:redefinePermission from="zope2.Public" to="zope.Public" />
+
+  <five:loadProducts/>
+  <five:loadProductsOverrides/>
+
+</configure>
