@@ -71,3 +71,4 @@ New internal features:
 - Add default roles in the VariousImporter class
 - Create the default manager from the CPS site add form
 - add a RAM Cache Manager for the default directories in default profile
+- The CPSTestCase testing framework now uses a testrunner layer.
